Infrastructure/micro-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /renting-api
            pathType: Prefix
            backend:
              serviceName: renting-api-service
              servicePort: 80
          - path: /resource-api
            pathType: Prefix
            backend:
              serviceName: resource-api-service
              servicePort: 80
